cargo-features = ["codegen-backend"]
[package]
name = "test-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.3"
indexmap = "2.2.6"
itertools = "0.12.1"
log = "0.4.21"
logos = "0.14.0"
lsp-server = "0.7.6"
lsp-types = "0.95.1"
pyo3 = { version = "0.21.2", features = ["auto-initialize"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }

[profile.dev]
debug = 0
codegen-backend = "cranelift"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
